src/assets/less/local.less
// ─────────────────────────────────────────────────────────────────────────────
// HOME PAGE STYLES
// Below-the-fold styles for the homepage that load after critical styles.
// The first section of the home page should go in critical.less, while the
// rest of the home page styles go in here.
// ─────────────────────────────────────────────────────────────────────────────

/*-- -------------------------- -->
<---     Transform Gallery      -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #transform-gallery {
        padding: 120px 0;
        /* clips anything overflowing */
        overflow: hidden;
        position: relative;
        z-index: 1;

        .cs-container {
            width: 100%;
            display: flex;
            flex-direction: column;
            align-items: center;
        }

        .cs-section-header {
            display: flex;
            padding-bottom: 120px;
            flex-direction: column;
            align-items: center;
            max-width: (694/16rem);
            overflow: hidden;
            gap: 30px;
        }

        .cs-left-column {
            width: 400px;
        }

        .cs-right-column {
            width: 100%;
            text-align: center;
            justify-items: center;
            align-items: center;
        }

        .cs-divider {
            width: 100vw;
            height: 1px;
            background: #D2D8DF;
            opacity: 1;
            display: block;
        }

        .cs-topper {
            text-align: center;
            margin: auto;
        }

        .cs-title {
            text-align: center;
            margin: auto;
            position: relative;
            z-index: 1;
        }

        .cs-text {
            margin-bottom: (16/16rem);
            padding: 0px 10px;
            width: 100%;
            text-align: center;

            &:last-of-type {
                /* 24px - 32px */
                margin-bottom: clamp(1.5rem, 3vw, 2rem);
            }
        }

        .cs-button-nodeco {
            align-self: center;
            justify-self: center;
        }

        /* Transform Gallery Styling */
        .cs-transform-gallery {
            position: relative;
            width: 100%;
            height: 90vh;
            }

        .cs-slider-item {
            display: none;
            width: 200px;
            height: 140px;
            list-style-type: none;
            position: absolute;
            top: 78%;
            transform: translateY(-50%);
            z-index: 1;
            background-position: center;
            background-size: cover;
            border-radius: 5px;
            box-shadow: 0 20px 30px rgba(0,0,0,0.3);
            transition: transform 0.1s, left 0.75s, top 0.75s, width 0.75s, height 0.75s;

            &:nth-child(1), &:nth-child(2) {
                left: 0;
                top: 0;
                width: 100%;
                height: 100%;

                display: flex;
                flex-direction: column;
                align-items: center;


                transform: none;
                border-radius: 0;
                box-shadow: none;
                opacity: 1;
            }

            &:nth-child(3) { left: 5%; }
            &:nth-child(4) { left: calc(5% + 220px); }
            &:nth-child(5) { left: calc(5% + 440px); }
            &:nth-child(6) { left: calc(5% + 660px); opacity: 0; }
        }

        .cs-slider-content {
            /* width: min(30vw,400px); */
            width: 100%;
            max-width: 400px;
            margin: auto;
            top: 18%;
            left: none;
            display: flex;
            flex-direction: column;
            text-align: center;
            justify-items: center;
            align-items: center;

            padding: 30px;
            background-color: rgba(0,0,0,0.4);
            border-radius: 5px;
            position: absolute;
            /* top: 50%; */
            /* left: 10%; */
            transform: translateY(-50%);
            text-shadow: 0px 0px 10px rgba(0,0,0,1);
            opacity: 0;

            & .cs-title {
                display: none;
                color: #fff;
                text-transform: lowercase;
                font-size: 64px;
                letter-spacing: .1rem;
                font-weight: 600;
                /* margin-bottom: 20px; */
            }

            & .cs-text {
                color: #fff;
                text-shadow: 0px 0px 6px rgba(0,0,0,1);
            }
        }

        .cs-slider-item:nth-of-type(2) .cs-slider-content {
            display: block;
            animation: show 0.75s ease-in-out 0.3s forwards;
        }

        @keyframes show {
            0% {
                filter: blur(5px);
                transform: translateY(calc(-50% + 75px));
            }
            100% {
                opacity: 1;
                filter: blur(0);
            }
        }

        .nav {
            position: absolute;
            bottom: 2rem;
            left: 50%;
            transform: translateX(-50%);
            z-index: 5;
            user-select: none;

            & .btn {
                background-color: rgba(0,0,0,0.4);
                color: rgb(255, 255, 255);
                border: 1px solid rgba(0, 0, 0, 0.2);
                margin: 0 0.25rem;
                padding: 0.75rem;
                border-radius: 50%;
                cursor: pointer;

                &:hover {
                    background-color: rgba(0,0,0,0.1);
                }
            }
        }
    }
}
/* ... */

